 (Format: Year/Month/Day)
Changes for 1.0rc2:
*06/06/28:
   * Linear cycling wasn't affecting normal cycling order (Mark)
     WorkspaceCmd.cc
   * Little cleanup of dead functions (Mark)
     Workspace.cc/hh
   * Fixed more focus issues with linear cycling and tabbed windows (Mark)
     Window.cc FocusControl.cc Screen.cc
   * Fixed some focus issues on detach and restart (Mark)
     Window.cc FocusControl.cc/hh Screen.cc
*06/06/27:
   * Some minor cleaning (thanks Slava Semushin + Mikhail Gusarov)
     FbTk/StringUtil.hh/cc Remember.cc
   * Fix slit menu so it closes when you press escape (Mark)
     Slit.cc
*06/06/26:
   * Fix _NET_FRAME_EXTENTS implementation (Simon)
     Ewmh.cc Window.cc Screen.cc FbWinFrame.hh
   * Fix FocusHidden (Mark)
     Window.cc/hh
*06/06/25:
   * Fix [ 1512046 ] "window.label.unfocus.pixmap" doesn't update (Simon)
     - FbPixmap::copy was keeping the same pixmap if they had same 
       dimensions. This effectively broke the image cache.
     FbPixmap.cc
   * Explicitly map NoSymbol to keycode 0 (thanks Julien Trolet)
     (seems to be assigned to several keycodes)
     FbTk/KeyUtil.cc
   * Menu aware of text encodings (Simon)
     - new menu file options: 
         [encoding] {CODESET}
           ...
         [endencoding]
     - All distributions are encouraged to use these inside any 
       auto-generated menu files, so that they are independent of user 
       encoding.
     - Encoding defaults to user's current encoding
     MenuCreator.hh/cc FbTk/FbString.hh/cc nls/fluxbox-nls.hh C/Translation.m
   * Fix crash when unable to convert between local and utf-8 encodings (Simon)
     FbTk/FbString.cc
   * Fix DetachClient key command so new window is visible (Mark)
     Window.cc
*06/06/24:
   * Make Urgency Hint flash the correct tab in a group (Mark)
     Ewmh.cc Window.cc/hh WinClient.cc/hh FbWinFrame.cc/hh IconbarTool.cc
     AttentionNoticeHandler.cc/hh
   * Fix some more X-errors (Simon)